infrastructure/k8s/base/cert-manager.yaml
---
# cert-manager installation namespace
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    name: cert-manager
---
# Note: For production, install cert-manager using Helm chart
# This provides complete CRD installation and controller deployment
# 
# Installation command:
# kubectl apply -f https://github.com/cert-manager/cert-manager/releases/download/v1.16.2/cert-manager.crds.yaml
# helm repo add jetstack https://charts.jetstack.io
# helm repo update
# helm install cert-manager jetstack/cert-manager \
#   --namespace cert-manager \
#   --create-namespace \
#   --version v1.16.2
